Fix bug #37456 (DOMElement->setAttribute() loops forever)